--- a/app/index.html
+++ b/app/index.html
@@ -5,15 +5,19 @@
     </head>
 
     <body>
-        <div id="gameContainer" ng-controller="CONTROLLER as ctrl">
+        <div id="container" ng-controller="CONTROLLER as ctrl">
         </div>
 
+        <!-- Plugins -->
         <script src="bower_components/angular/angular.js"></script>
+        <script src="bower_components/angular-animate/angular-animate.js"></script>
         <script src="bower_components/angular-route/angular-route.js"></script>
 
+        <!-- Library Scripts -->
         <script src="scripts/libs/Assert.js"></script>
         <script src="scripts/libs/Polymorphism.js"></script>
 
+        <!-- Code Scripts -->
         <script src="scripts/SCRIPT.js"></script>
     </body>
 </html>
