--- a/app/index.html
+++ b/app/index.html
@@ -1,7 +1,8 @@
 <!DOCTYPE html>
 <html ng-app='NGAPP'>
     <head>
-        <link rel="stylesheet" type="text/css" href="styles/STYLE.css">
+        <meta charset="utf-8">
+        <link rel="stylesheet" href="styles/styles.css">
     </head>
 
     <body>
@@ -9,6 +10,8 @@
         </div>
 
         <!-- Plugins -->
+        <script src="//ajax.googleapis.com/ajax/libs/jquery/1.10.2/jquery.min.js"></script>
+        <script src="http://cdnjs.cloudflare.com/ajax/libs/gsap/1.10.3/TweenMax.min.js"></script>
         <script src="bower_components/angular/angular.js"></script>
         <script src="bower_components/angular-animate/angular-animate.js"></script>
         <script src="bower_components/angular-route/angular-route.js"></script>
@@ -18,6 +21,6 @@
         <script src="scripts/libs/Polymorphism.js"></script>
 
         <!-- Code Scripts -->
-        <script src="scripts/SCRIPT.js"></script>
+        <script src="scripts/app.js"></script>
     </body>
 </html>
