--- a/app/index.html
+++ b/app/index.html
@@ -2,6 +2,7 @@
 <html ng-app='NGAPP'>
     <head>
         <meta charset="utf-8">
+        <link href="bower_components/angular-bootstrap/ui-bootstrap-csp.css" rel="stylesheet">
         <link rel="stylesheet" href="styles/styles.css">
     </head>
 
@@ -11,11 +12,11 @@
 
         <!-- Plugins -->
         <script src="//ajax.googleapis.com/ajax/libs/jquery/1.10.2/jquery.min.js"></script>
-        <script src="http://cdnjs.cloudflare.com/ajax/libs/gsap/1.10.3/TweenMax.min.js"></script>
         <script src="bower_components/angular/angular.js"></script>
-        <script src="bower_components/angular-bootstrap/ui-bootstrap.js"></script>
         <script src="bower_components/angular-animate/angular-animate.js"></script>
+        <script src="bower_components/angular-bootstrap/ui-bootstrap.js"></script>
         <script src="bower_components/angular-route/angular-route.js"></script>
+        <script src="http://cdnjs.cloudflare.com/ajax/libs/gsap/1.10.3/TweenMax.min.js"></script>
 
         <!-- Library Scripts -->
         <script src="scripts/libs/Assert.js"></script>
