--- a/app/oldIndex.html
+++ b/app/oldIndex.html
@@ -37,7 +37,7 @@
 <!--<script src="scripts/libs/Assert.js"></script>-->
 <!--<script src="scripts/libs/Polymorphism.js"></script>-->
 <!---->
-<!--<script src="app.js"></script>-->
+<!--<script src="oldApp.js"></script>-->
 <!--<script src="view1/view1.js"></script>-->
 <!--<script src="view2/view2.js"></script>-->
 <!--<script src="components/version/version.js"></script>-->
