--- a/app/index.html
+++ b/app/index.html
@@ -1,13 +1,14 @@
 <!DOCTYPE html>
-<html ng-app='NGAPP'>
+<html ng-app='app'>
     <head>
         <meta charset="utf-8">
         <link href="bower_components/angular-bootstrap/ui-bootstrap-csp.css" rel="stylesheet">
-        <link rel="stylesheet" href="styles/styles.css">
+        <link rel="stylesheet" href="css/styles.css">
     </head>
 
     <body>
-        <div id="container" ng-controller="CONTROLLER as ctrl">
+        <div id="container" ng-controller="navBarController as navCtrl">
+            <navbar></navbar>
         </div>
 
         <!-- Plugins -->
@@ -16,6 +17,7 @@
         <script src="bower_components/angular-animate/angular-animate.js"></script>
         <script src="bower_components/angular-bootstrap/ui-bootstrap.js"></script>
         <script src="bower_components/angular-route/angular-route.js"></script>
+        <script src="bower_components/angular-css/angular-css.js"></script>
         <script src="http://cdnjs.cloudflare.com/ajax/libs/gsap/1.10.3/TweenMax.min.js"></script>
 
         <!-- Library Scripts -->
@@ -24,5 +26,7 @@
 
         <!-- Code Scripts -->
         <script src="scripts/app.js"></script>
+        <script src="scripts/controllers.js"></script>
+        <script src="scripts/directives.js"></script>
     </body>
 </html>
