--- a/app/directives/navbar.html
+++ b/app/directives/navbar.html
@@ -1,9 +1,5 @@
-<nav class="{{navCtrl.active}}" ng-click="$event.preventDefault()">
-    <a href="#" class="home" ng-click="navCtrl.active='home'">Home</a>
-    <a href="#" class="projects" ng-click="navCtrl.active='projects'">Projects</a>
-    <a href="#" class="services" ng-click="navCtrl.active='services'">Services</a>
-    <a href="#" class="contact" ng-click="navCtrl.active='contact'">Contact</a>
+<nav class="{{searchCtrl.active}}" ng-click="$event.preventDefault()">
+    <a ng-repeat="theater in (searchCtrl.theaters)" href="#" ng-class="theater.name.toLowerCase()" ng-click="searchCtrl.changeTheater(theater.id, theater.name)">
+        {{theater.name}}
+    </a>
 </nav>
-
-<p ng-hide="navCtrl.active">Please click a menu item</p>
-<p ng-show="navCtrl.active">You chose <b>{{navCtrl.active}}</b></p>
